--- a/11thLauncher/Views/Controls/ParametersView.xaml
+++ b/11thLauncher/Views/Controls/ParametersView.xaml
@@ -3,15 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:p="clr-namespace:_11thLauncher.Model.Parameter"
+             xmlns:model="clr-namespace:_11thLauncher.Model.Parameter"
+             xmlns:util="clr-namespace:_11thLauncher.Views.Util"
              xmlns:resx="clr-namespace:_11thLauncher.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
     <UserControl.Resources>
-       <p:ParameterTemplateSelector x:Key="ParameterTemplateSelector" />
-        <DataTemplate x:Key="ParameterBooleanTemplate" DataType="p:LaunchParameter">
-            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
+        <util:ParameterTemplateSelector x:Key="ParameterTemplateSelector" />
+        <!-- Boolean parameter template -->
+        <DataTemplate x:Key="ParameterBooleanTemplate" DataType="model:LaunchParameter">
+            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Margin="0,1">
                 <CheckBox IsChecked="{Binding IsEnabled}" Margin="310,0,0,0"/>
                 <Label Content="{Binding Path=DisplayName}" ContentStringFormat=":{0}" Width="260" >
                     <Label.ToolTip>
@@ -32,9 +34,34 @@
                 </Label>
             </StackPanel>
         </DataTemplate>
-        <DataTemplate x:Key="ParameterSelectionTemplate" DataType="p:LaunchParameter">
-            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
-                <ComboBox ItemsSource="{Binding Values}" DisplayMemberPath="DisplayName" IsEnabled="{Binding IsEnabled}" Width="300" FlowDirection="LeftToRight"/>
+        <!-- Selection parameter template -->
+        <DataTemplate x:Key="ParameterSelectionTemplate" DataType="model:LaunchParameter">
+            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Margin="0,5">
+                <ComboBox ItemsSource="{Binding Values}" DisplayMemberPath="DisplayName" IsEnabled="{Binding IsEnabled}" Width="280" Margin="20,0,0,0" FlowDirection="LeftToRight"/>
+                <CheckBox IsChecked="{Binding IsEnabled}" Margin="10,0,0,0" />
+                <Label Content="{Binding Path=DisplayName}" ContentStringFormat=":{0}" Width="260">
+                    <Label.ToolTip>
+                        <ToolTip FlowDirection="LeftToRight">
+                            <StackPanel>
+                                <TextBlock FontWeight="SemiBold">
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0}: {1}">
+                                            <Binding Mode="OneWay" Source="{x:Static resx:Resources.S_PARAMETER_COMMAND}" />
+                                            <Binding Path="Name"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                                <TextBlock Text="{Binding Tooltip}" />
+                            </StackPanel>
+                        </ToolTip>
+                    </Label.ToolTip>
+                </Label>
+            </StackPanel>
+        </DataTemplate>
+        <!-- Text parameter template -->
+        <DataTemplate x:Key="ParameterTextTemplate" DataType="model:LaunchParameter">
+            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Margin="0,5">
+                <TextBox Text="{Binding Name, Mode=TwoWay}" IsEnabled="{Binding IsEnabled}" Width="280" Margin="20,0,0,0" FlowDirection="LeftToRight"/>
                 <CheckBox IsChecked="{Binding IsEnabled}" Margin="10,0,0,0" />
                 <Label Content="{Binding Path=DisplayName}" ContentStringFormat=":{0}" Width="260">
                     <Label.ToolTip>
@@ -58,8 +85,6 @@
     </UserControl.Resources>
 
     <Grid>
-        <ScrollViewer Margin="0,10,0,0">
-            <ListBox x:Name="Parameters" ItemTemplateSelector="{StaticResource ParameterTemplateSelector}"/>
-        </ScrollViewer>
+        <ListBox x:Name="Parameters" Margin="0,10,0,0"  ItemTemplateSelector="{StaticResource ParameterTemplateSelector}"/>
     </Grid>
 </UserControl>
