--- a/11thLauncher/Views/ShellView.xaml
+++ b/11thLauncher/Views/ShellView.xaml
@@ -2,7 +2,7 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:cal="http://www.caliburnproject.org"
+                      xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
                       xmlns:resx="clr-namespace:_11thLauncher.Properties"
                       xmlns:vm="clr-namespace:_11thLauncher.ViewModels"
                       xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
