--- a/11thLauncher/Views/Controls/AddonsView.xaml
+++ b/11thLauncher/Views/Controls/AddonsView.xaml
@@ -4,13 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vm="clr-namespace:_11thLauncher.ViewModels.Controls"
-             xmlns:resx="clr-namespace:_11thLauncher.Properties"
+             xmlns:resx="clr-namespace:_11thLauncher.Resources"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=vm:AddonsViewModel}" d:DesignWidth="353.815" d:DesignHeight="406.244">
 
     <Grid>
-        <Label Content="{x:Static resx:Resources.S_ADDON_PRESETS}" 
+        <Label Content="{x:Static resx:Strings.S_ADDON_PRESETS}" 
                HorizontalAlignment="Left" 
                VerticalAlignment="Top"
                Margin="45,10,0,0" />
@@ -35,7 +35,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button x:Name="ButtonMoveUp" ToolTip="{x:Static resx:Resources.S_BTN_ADDONS_UP_TIP}" 
+        <Button x:Name="ButtonMoveUp" ToolTip="{x:Static resx:Strings.S_BTN_ADDONS_UP_TIP}" 
                 Style="{DynamicResource MetroCircleButtonStyle}" 
                 Margin="15,302,0,0"
                 Width="30" Height="30"
@@ -47,7 +47,7 @@
             </Rectangle>
         </Button>
 
-        <Button x:Name="ButtonMoveDown" ToolTip="{x:Static resx:Resources.S_BTN_ADDONS_DOWN_TIP}" 
+        <Button x:Name="ButtonMoveDown" ToolTip="{x:Static resx:Strings.S_BTN_ADDONS_DOWN_TIP}" 
                 Style="{DynamicResource MetroCircleButtonStyle}"
                 Margin="60,302,0,0"
                 Width="30" Height="30"
