--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -4,14 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:configuration="clr-namespace:_11thLauncher.Configuration"
-             xmlns:m="clr-namespace:_11thLauncher.Model.Game"
+             xmlns:m="clr-namespace:_11thLauncher.Model"
              xmlns:model="clr-namespace:_11thLauncher.Model"
              xmlns:vm="clr-namespace:_11thLauncher.ViewModels.Controls"
-             xmlns:resx="clr-namespace:_11thLauncher.Properties"
+             xmlns:resx="clr-namespace:_11thLauncher.Resources"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
-             xmlns:game="clr-namespace:_11thLauncher.Game"
              mc:Ignorable="d" 
              d:DesignHeight="337" d:DesignWidth="615" d:DataContext="{d:DesignInstance Type=vm:GameViewModel}">
     <Grid>
@@ -35,31 +33,31 @@
             </i:Interaction.Triggers>
         </controls:SplitButton>
 
-        <Label Content="{x:Static resx:Resources.S_PLATFORM}"
+        <Label Content="{x:Static resx:Strings.S_PLATFORM}"
                HorizontalAlignment="Left" VerticalAlignment="Top" 
                Padding="0,5,5,5" Margin="227,102,0,0" />
         <ComboBox ItemsSource="{Binding Source={model:Enumeration {x:Type m:Platform}}}" DisplayMemberPath="Description" 
                   SelectedValue="{Binding Platform}" SelectedValuePath="Value"
-                  ToolTip="{x:Static resx:Resources.S_PLATFORM_TIP}"
+                  ToolTip="{x:Static resx:Strings.S_PLATFORM_TIP}"
             HorizontalAlignment="Left" VerticalAlignment="Top" 
             Width="123" Margin="292,102,0,0" />
 
-        <Label Content="{x:Static resx:Resources.S_PRIORITY}"
+        <Label Content="{x:Static resx:Strings.S_PRIORITY}"
                HorizontalAlignment="Left" VerticalAlignment="Top" 
                Padding="0,5,5,5" Margin="227,145,0,0" />
         <ComboBox ItemsSource="{Binding Source={model:Enumeration {x:Type m:Priority}}}" DisplayMemberPath="Description" 
                   SelectedValue="{Binding Priority}" SelectedValuePath="Value"
-                  ToolTip="{x:Static resx:Resources.S_PRIORITY_TIP}"
+                  ToolTip="{x:Static resx:Strings.S_PRIORITY_TIP}"
             HorizontalAlignment="Left"  VerticalAlignment="Top" 
             Width="123" Margin="292,145,0,0" />
 
-        <Label Content="{x:Static resx:Resources.S_SERVER}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,188,0,0" Padding="0,5,5,5"/>
+        <Label Content="{x:Static resx:Strings.S_SERVER}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,188,0,0" Padding="0,5,5,5"/>
         <TextBox Text="{Binding Server}" HorizontalAlignment="Left" Height="23" Width="188" Margin="227,214,0,0" VerticalAlignment="Top" />
 
-        <Label Content="{x:Static resx:Resources.S_PORT}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,245,0,0"  Padding="0,5,5,5"/>
+        <Label Content="{x:Static resx:Strings.S_PORT}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,245,0,0"  Padding="0,5,5,5"/>
         <TextBox Text="{Binding Port}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="80" Margin="227,271,0,0" />
 
-        <Label Content="{x:Static resx:Resources.S_PASSWORD}" HorizontalAlignment="Left" Margin="320,245,0,0" VerticalAlignment="Top" Padding="0,5,5,5"/>
+        <Label Content="{x:Static resx:Strings.S_PASSWORD}" HorizontalAlignment="Left" Margin="320,245,0,0" VerticalAlignment="Top" Padding="0,5,5,5"/>
         <PasswordBox x:Name="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="320,271,0,0" />
     </Grid>
 </UserControl>
