--- a/11thLauncher/Views/ShellView.xaml
+++ b/11thLauncher/Views/ShellView.xaml
@@ -75,7 +75,7 @@
         <ContentControl x:Name="ProfileSelector"/>
 
         <!-- Logo & version -->
-        <Image Source="/Resources/a3logo.png" 
+        <Image Source="{Binding LogoImage}" 
                Height="140" 
                Width="365" 
                HorizontalAlignment="Left" 
