--- a/11thLauncher/Views/Controls/AddonsView.xaml
+++ b/11thLauncher/Views/Controls/AddonsView.xaml
@@ -40,10 +40,10 @@
                 Margin="15,302,0,0"
                 Width="30" Height="30"
                 HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Rectangle Width="10" Height="10">
-                <Rectangle.Fill>
+            <Rectangle Width="10" Height="10" Fill="{DynamicResource HighlightBrush}">
+                <Rectangle.OpacityMask>
                     <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_arrow_up}" />
-                </Rectangle.Fill>
+                </Rectangle.OpacityMask>
             </Rectangle>
         </Button>
 
@@ -52,10 +52,10 @@
                 Margin="60,302,0,0"
                 Width="30" Height="30"
                 HorizontalAlignment="Left"  VerticalAlignment="Top" >
-            <Rectangle Width="10" Height="10">
-                <Rectangle.Fill>
+            <Rectangle Width="10" Height="10" Fill="{DynamicResource HighlightBrush}">
+                <Rectangle.OpacityMask>
                     <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_arrow_down}" />
-                </Rectangle.Fill>
+                </Rectangle.OpacityMask>
             </Rectangle>
         </Button>
 
@@ -78,10 +78,10 @@
                 Width="30" Height="30"
                 Margin="130,302,0,0"
                 HorizontalAlignment="Left"  VerticalAlignment="Top" >
-            <Rectangle Width="10" Height="10">
-                <Rectangle.Fill>
+            <Rectangle Width="10" Height="10" Fill="{DynamicResource HighlightBrush}">
+                <Rectangle.OpacityMask>
                     <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_check}" />
-                </Rectangle.Fill>
+                </Rectangle.OpacityMask>
             </Rectangle>
         </Button>
 
@@ -90,10 +90,10 @@
                 Margin="175,302,0,0"
                 Width="30" Height="30"
                 HorizontalAlignment="Left"  VerticalAlignment="Top">
-            <Rectangle Width="10" Height="10">
-                <Rectangle.Fill>
+            <Rectangle Width="10" Height="10" Fill="{DynamicResource HighlightBrush}">
+                <Rectangle.OpacityMask>
                     <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_close}" />
-                </Rectangle.Fill>
+                </Rectangle.OpacityMask>
             </Rectangle>
         </Button>
     </Grid>
